tests/fixtures/invalid/list_div_bool.py
# Cannot divide List[int] and Bool
x: float = [1, 2, 3] / True
